--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="side_kick_blocks.js" defer></script>
   <script src="side_kick_generator.js" defer></script>
-  <script src="/storage.js"></script>
+  <!--script src="/storage.js"></script-->
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
