--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
             <td class="tabmax">
 
               <button type="button">Load Program</button>
-              <button type="button">Save Program</button>
+              <button id="linkButton">Save Program</button>
               <button id="trashButton">Delete Program</button>
-              <button type="button">Flash Code to Robot</button>
+              <button id="runButton">Flash Code to Robot</button>
 
               <!--button id="trashButton" class="notext" title="...">
                 <img src='../../media/1x1.gif' class="trash icon21">
               </button-->
-              <button id="linkButton" class="notext" title="...">
+              <!--button id="linkButton" class="notext" title="...">
                 <img src='../../media/1x1.gif' class="link icon21">
-              </button>
-              <button id="runButton" class="notext primary" title="...">
+              </button-->
+              <!--button id="runButton" class="notext primary" title="...">
                 <img src='../../media/1x1.gif' class="run icon21">
-              </button>
+              </button-->
             </td>
           </tr>
         </table>
