--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <script src="side_kick_blocks.js" defer></script>
   <script src="side_kick_generator.js" defer></script>
   <!--script src="/storage.js"></script-->
-  <script src="../../blockly_compressed.js"></script>
-  <script src="../../blocks_compressed.js"></script>
-  <script src="../../javascript_compressed.js"></script>
-  <script src="../../python_compressed.js"></script>
-  <script src="../../php_compressed.js"></script>
-  <script src="../../lua_compressed.js"></script>
-  <script src="../../dart_compressed.js"></script>
+  <script src="blockly_compressed.js"></script>
+  <script src="blocks_compressed.js"></script>
+  <script src="javascript_compressed.js"></script>
+  <script src="python_compressed.js"></script>
+  <script src="php_compressed.js"></script>
+  <script src="lua_compressed.js"></script>
+  <script src="dart_compressed.js"></script>
   <script src="code.js"></script>
 </head>
 
