--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google" value="notranslate">
-  <title>PITSCO SideKick Robot:</title>
+  <title>PITSCO SideKick Robot 1:</title>
   <link rel="stylesheet" href="style.css">
 
-  <script src="side_kick_blocks.js" defer></script>
-  <script src="side_kick_generator.js" defer></script>
+  <script src="./side_kick_blocks.js" defer></script>
+  <script src="./side_kick_generator.js" defer></script>
   <!--script src="/storage.js"></script-->
-  <script src="blockly_compressed.js"></script>
-  <script src="blocks_compressed.js"></script>
-  <script src="javascript_compressed.js"></script>
-  <script src="python_compressed.js"></script>
-  <script src="php_compressed.js"></script>
-  <script src="lua_compressed.js"></script>
-  <script src="dart_compressed.js"></script>
-  <script src="code.js"></script>
+  <script src="./blockly_compressed.js"></script>
+  <script src="./blocks_compressed.js"></script>
+  <script src="./javascript_compressed.js"></script>
+  <script src="./python_compressed.js"></script>
+  <script src="./php_compressed.js"></script>
+  <script src="./lua_compressed.js"></script>
+  <script src="./dart_compressed.js"></script>
+  <script src="./code.js"></script>
 </head>
 
 
