--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <td class="tabmax">
 
               <button type="button">Load Program</button>
+              <button id="saveButton">Save Program</button>
               <button id="linkButton">Save Program</button>
               <button id="trashButton">Delete Program</button>
               <button id="runButton">Flash Code to Robot</button>
