--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <td class="tabmin tab_collapse">&nbsp;</td>
             <td id="tab_javascript" class="taboff tab_collapse">JavaScript</td>
             <td class="tabmin tab_collapse">&nbsp;</td>
-            <td id="tab_python" class="taboff tab_collapse">Python</td>
+            <td id="tab_python">Python</td>
             <td class="tabmin tab_collapse">&nbsp;</td>
             <td id="tab_php" class="taboff tab_collapse">PHP</td>
             <td class="tabmin tab_collapse">&nbsp;</td>
@@ -59,7 +59,7 @@
             <td class="tabmin">&nbsp;</td>
             <td id="tab_code" class="taboff">
               <select id="code_menu"></select>
-            </td>
+            </td-->
             <td class="tabmax">
 
               <label class="input-button">Load Blocks:&nbsp;<input accept=".blockly,
@@ -69,7 +69,7 @@
               <!--button id="linkButton">Save Program</button-->
               <button id="trashButton">Delete Blocks</button>
               <!--button id="runButton">Flash Code to Robot</button-->
-              <button onclick="saveCode()">Flash Code to Board</button>
+              <button onclick="saveCode()">Save Python Code</button>
 
               <!--button id="trashButton" class="notext" title="...">
                 <img src='../../media/1x1.gif' class="trash icon21">
