--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
   <script src="./code.js"></script>
 </head>
 
-
+<div style="height: 2vh; width: 95%; margin-bottom: 2px; background-color: #263238;"></div>
 
   <body style="text-align: left;">
+
+
 
 
 
@@ -47,7 +49,7 @@
 
 
 
-  <table width="95%" height="85%">
+  <table width="98%" height="85%">
     <tr>
       <td>
         <h1><!--a href="https://www.pitsco.com"> PITSCO Pyoneer Robot</a-->
@@ -723,8 +725,8 @@
   </video>
 </div-->
 
-<div style="height: 3vh; width: 95%; margin-bottom: 5px; background-color: #03A9F4;"></div>
-<div style="height: 2vh; width: 95%; margin-bottom: 2px;"></div>
+<div style="height: 2vh; width: 95%; margin-bottom: 5px; background-color: #263238;"></div>
+
 
 
 <!--button onclick="loadBlocklyCodeFromFile()">Load Blocks</button-->
@@ -748,8 +750,6 @@ text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCode
 
 <!--label class="input-button">Load Blocks:&nbsp;<input accept=".blockly,
 text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCodeFromFile();"/></label-->
-
-
 
 </body>
 
