--- a/index.html
+++ b/index.html
@@ -263,6 +263,22 @@ function placeIt() {
           </shadow>
         </value>
       </block>
+      <block type="pixel_blink">
+        <!--value name="color">
+          <shadow type="colour_picker"/>
+        </value-->
+        <value name="color">
+          <shadow type="colour_picker">
+            <field name="COLOUR">#ff0000</field>
+          </shadow>
+        </value>
+        <value name="times">
+          <shadow type="math_number">
+            <field name="NUM">5</field>
+          </shadow>
+        </value>
+      </block>
+      <block type="pixel_animate"></block>
       <block type="pixels_off"></block>
       <block type="color_picker"></block>
       <block type="color_random"></block>
