--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ function placeIt() {
     </category>
 
     <category name="Sound" colour= "#1b84e4">
+      <block type="sound_effect"></block>
       <block type="sound_tone">
         <value name="tone">
           <shadow type="math_number">
