--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google" value="notranslate">
-  <title>PITSCO Pyoneer Robot:</title>
+  <title>PITSCO SideKick Robot:</title>
   <link rel="stylesheet" href="style.css">
 
   <script src="./side_kick_blocks.js" defer></script>
