--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCode
   <div style="float:left; background-color:gray; padding:2px; border:1px solid black">
   <span style="float:right; background-color:#263238; color:white; font-weight:normal; width='20px'; text-align:center; cursor:pointer" onclick="javascript:hideIt()">&nbsp;Hide&nbsp;</span>
   </div>
-  <div id="player_header">Click here to move</div>
+  <div id="playerheader">Click here to move</div>
   <iframe
     id="player"
     name="myplayer"
@@ -848,9 +848,9 @@ dragElement(document.getElementById("layer1"));
 
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-  if (document.getElementById("player_header")) {
+  if (document.getElementById("playerheader")) {
     /* if present, the header is where you move the DIV from:*/
-    document.getElementById("player_header").onmousedown = dragMouseDown;
+    document.getElementById("playerheader").onmousedown = dragMouseDown;
   } else {
     /* otherwise, move the DIV from anywhere inside the DIV:*/
     /*elmnt.onmousedown = dragMouseDown;*/
