--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCode
   <div style="float:left; background-color:gray; padding:2px; border:1px solid black">
   <span style="float:right; background-color:#263238; color:white; font-weight:normal; width='20px'; text-align:center; cursor:pointer" onclick="javascript:hideIt()">&nbsp;Hide&nbsp;</span>
   </div>
-  <div id="playerheader">Click here to move</div>
+  <div id="playerheader">click here to move</div>
   <iframe
     id="player"
     name="myplayer"
