--- a/index.html
+++ b/index.html
@@ -851,7 +851,8 @@ text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCode
     visibility="hidden">
   </iframe-->
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/5n3znd-0x5w?rel=0" id="player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?&list=PLN0cIpOQ5IyR5oI1WT6gzf2RX5IDGYJC2&index=1" id="player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
