--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ text/plain" type="file" id="fileToLoad" name="myFiles" onchange="loadBlocklyCode
   </iframe-->
 
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?&list=PLN0cIpOQ5IyR5oI1WT6gzf2RX5IDGYJC2&index=1" id="player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?&list=PLN0cIpOQ5IyR5oI1WT6gzf2RX5IDGYJC2&index=1" id="player" title="YouTube video player" frameborder="0" modestbranding="1" rel="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
